<resources>
    <string name="app_name">Album G8</string>
    <string name="txt_date">Ngày</string>
    <string name="setting_topic">Chủ đề</string>
    <string name="setting_sync">Đồng bộ ảnh trực tuyến</string>
    <string name="setting_policy">Chính sách bảo mật</string>
    <string name="setting_term">Điều khoản dịch vụ</string>
    <string name="setting">Cài đặt</string>
    <string name="version_app">My Album phiên bản 1.0</string>
    <string name="fragment_image">Ảnh</string>
    <string name="search_hint">Tìm kiếm ảnh</string>
    <string name="choose">Lựa chọn</string>
    <string name="page_name">My Album</string>
    <string name="log_in">Đăng nhập</string>
    <string name="log_out">Đăng xuất</string>



    <string name="activity_title_main">Filters</string>
    <string name="action_settings">Settings</string>
    <string name="filters">FILTERS</string>
    <string name="edit">EDIT</string>

    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>


    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>
</resources>