<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:textSize="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:background="@drawable/border_custom"
        android:layout_marginBottom="@dimen/dimen_20">
        <ImageView
            android:layout_width="@dimen/dimen_40"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_topic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/setting_topic"
            android:textSize="@dimen/dimen_20"/>

        <ImageView
            android:layout_width="@dimen/dimen_40"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_arrow_right"
            android:layout_gravity="right"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:background="@drawable/border_custom"
        android:layout_marginBottom="@dimen/dimen_20">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting_feedback"
            android:layout_weight="1"
            android:textSize="@dimen/dimen_20"/>
        <ImageView
            android:layout_width="@dimen/dimen_40"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_arrow_right"
            android:layout_gravity="right"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:background="@drawable/border_custom"
        android:layout_marginBottom="@dimen/dimen_20">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting_policy"
            android:layout_weight="1"
            android:textSize="@dimen/dimen_20"/>
        <ImageView
            android:layout_width="@dimen/dimen_40"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_arrow_right"
            android:layout_gravity="right"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:background="@drawable/border_custom"
        android:layout_marginBottom="@dimen/dimen_20">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting_term"
            android:layout_weight="1"
            android:textSize="@dimen/dimen_20"/>
        <ImageView
            android:layout_width="@dimen/dimen_40"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_arrow_right"
            android:layout_gravity="right"
            />
    </LinearLayout>

</LinearLayout>